# node_perf

./: .gitignore  README.md  bomber.sln  net_srv.sln  package-lock.json  package.json  run.ps1
.devcontainer/: devcontainer.json
.github/upgrades/: dotnet-upgrade-plan.md
Writerside/: n.tree
Writerside/topics/: starter-topic.md
bomber/: JsonBar.cs  JsonBarsResponse.cs  Program.cs  bomber.csproj  bomber.sln  config.json
net_grpc/: Program.cs  appsettings.json  net_grpc.csproj  net_grpc.sln  net_grpc.slnx
net_grpc/Properties/: launchSettings.json
net_grpc/Protos/: greet.proto
net_grpc/Services/: GreeterService.cs
net_rest/: Program.cs  appsettings.json  net_rest.http  net_rest.sln
net_rest/Properties/: launchSettings.json
net_src/: net_perf.sln
net_src/net_perf/: GrpcBarsService.cs  Program.cs  Storage.cs  appsettings.json  net_perf.csproj
net_srv/: GrpcBarsService.cs  Program.cs  Storage.cs  appsettings.json  net_srv.csproj
node_grpc-js/: index.js  package-lock.json  package.json
node_grpc-js_cluster/: index.js  package-lock.json  package.json
node_rest/: index.js  package-lock.json  package.json
node_rest_cluster/: index.js  package-lock.json  package.json
node_rest_express/: index.js  package-lock.json  package.json
node_rest_express_cluster/: index.js  package-lock.json  package.json
node_srv/: server.js
proto/: simple.proto
rust_axum_srv/: Cargo.toml
rust_grpc/: Cargo.toml  build.rs
rust_grpc/src/: main.rs
rust_rest_actix-web/: Cargo.toml
rust_rest_axum/: Cargo.toml
rust_srv/: Cargo.toml
src/: server.js
(+9 files in other folders)
